unpackaged/main/default/objects/ffirule__IntegrationRule__c/ffirule__IntegrationRule__c.object-meta.xml
<CustomObject>
    <customHelpPage>ffirule__helpintegrationrule</customHelpPage>
    <label>ClickLink Rule</label>
    <nameField>
        <label>ClickLink Rule</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ClickLink Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>