unpackaged/main/default/objects/ffirule__IntegrationRule__c/fields/ffirule__EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>ffirule__EmailTemplate__c</fullName>
    <label>Email Template</label>
    <length>80</length>
    <type>Text</type>
</CustomField>