unpackaged/main/default/objects/ffirule__IntegrationRule__c/fields/ffirule__RuleExplanation__c.field-meta.xml
<CustomField>
    <fullName>ffirule__RuleExplanation__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>