unpackaged/main/default/objects/ffirule__IntegrationRule__c/fields/ffirule__ScopeSize__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ScopeSize__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Batch Scope Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>