unpackaged/main/default/objects/ffirule__IntegrationRule__c/fields/ffirule__SourceObjectProcessedField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__SourceObjectProcessedField__c</fullName>
    <label>Source Object Processed Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>