unpackaged/main/default/objects/ffirule__IntegrationRule__c/fields/ffirule__SourceObjectProcessField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__SourceObjectProcessField__c</fullName>
    <label>Source Object Process Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>