unpackaged/main/default/objects/ffirule__IntegrationRule__c/fields/ffirule__SourceObjectReferenceToTargetField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__SourceObjectReferenceToTargetField__c</fullName>
    <label>Source Object Reference to Target</label>
    <length>80</length>
    <type>Text</type>
</CustomField>