unpackaged/main/default/objects/ffirule__IntegrationRule__c/fields/ffirule__SyncIsMaster__c.field-meta.xml
<CustomField>
    <fullName>ffirule__SyncIsMaster__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Is Master</label>
    <type>Checkbox</type>
</CustomField>