unpackaged/main/default/objects/ffirule__IntegrationRule__c/fields/ffirule__TargetObjectNameField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__TargetObjectNameField__c</fullName>
    <label>Target Object Name Field</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>