unpackaged/main/default/objects/ffirule__IntegrationRule__c/fields/ffirule__TargetObjectProcessedField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__TargetObjectProcessedField__c</fullName>
    <label>Processed Field on Target</label>
    <length>80</length>
    <type>Text</type>
</CustomField>