unpackaged/main/default/objects/ffirule__IntegrationRule__c/fields/ffirule__TargetObjectSourceCountField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__TargetObjectSourceCountField__c</fullName>
    <label>Relation Count Field on Target</label>
    <length>80</length>
    <type>Text</type>
</CustomField>