unpackaged/main/default/objects/ffirule__IntegrationRule__c/fields/ffirule__TargetObjectSyncActiveField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__TargetObjectSyncActiveField__c</fullName>
    <label>Target Object Sync Active Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>