unpackaged/main/default/objects/ffirule__IntegrationRule__c/fields/ffirule__TargetObjectSyncControlWhen__c.field-meta.xml
<CustomField>
    <fullName>ffirule__TargetObjectSyncControlWhen__c</fullName>
    <label>Target Object Sync Control When</label>
    <type>TextArea</type>
</CustomField>