unpackaged/main/default/objects/ffirule__IntegrationRule__c/fields/ffirule__TargetSourceMaximum__c.field-meta.xml
<CustomField>
    <fullName>ffirule__TargetSourceMaximum__c</fullName>
    <label>Relation Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>