unpackaged/main/default/objects/ffirule__IntegrationRule__c/listViews/ffirule__All.listView-meta.xml
<ListView>
    <fullName>ffirule__All</fullName>
    <columns>NAME</columns>
    <columns>ffirule__SourceObject__c</columns>
    <columns>ffirule__TargetObject__c</columns>
    <columns>ffirule__SyncEnabled__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>